--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "redux-first-routing",
   "version": "0.3.0",
   "description": "Redux-first routing",
-  "main": "lib/index.js",
-  "module": "es/index.js",
-  "jsnext:main": "es/index.js",
+  "main": "src/index.js",
   "license": "MIT",
   "homepage": "https://github.com/olavk/redux-first-routing",
   "repository": {
