disable UMD builds that were causing the prepublish script to fail

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   "scripts": {
     "clean": "rimraf lib es dist",
     "lint": "eslint src test",
-    "build": "npm run build:commonjs && npm run build:es && npm run build:umd && npm run build:umd:min",
+    "build": "npm run build:commonjs && npm run build:es",
     "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib",
     "build:es": "cross-env BABEL_ENV=es babel src --out-dir es",
     "build:umd": "cross-env BABEL_ENV=es NODE_ENV=development rollup -c -i src/index.js -o dist/redux-first-routing.js",
