--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lib"
   ],
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "history": "^4.9.0",
     "query-string": "^5.0.0"
   },
